--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.11",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "gen-vuex": "^1.0.7",
