--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ./:/app_2/
+      - .:/app/
     ports:
       - 8080:8080
     # env_file:
