--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
-version: '3.7'
+version: '3.9'
 
 services:
-
   client:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    volumes:
-      - .:/app/
+    build: .
+    container_name: mediheart-client
     ports:
       - 8080:8080
     environment: 
       - VUE_APP_API_URL=http://localhost:8000/api
-    # env_file:
-    #   - ./env/dev/.env
+    
